Clean up formatting of deployment types and server names

--- a/app/templates/partials/form/add-deployment.twig
+++ b/app/templates/partials/form/add-deployment.twig
@@ -37,7 +37,7 @@ Needs the following parameters:
             <label for="path">
                 File path
                 <small class="additional">
-                    <strong>Rsync Servers Only</strong><br>
+                    <strong>Rsync and EC2 Servers Only</strong><br>
                     The absolute path to the file directory on the server.
                     <br>Paths must begin with a forward slash (/).
                 </small>
