--- a/app/templates/partials/push-table.twig
+++ b/app/templates/partials/push-table.twig
@@ -22,16 +22,7 @@
             </td>
             <td>
                 {% if push.deployment %}
-
-                    {% if push.deployment.server.type == 'elasticbeanstalk' %}
-                        {% set servername = 'EB (' ~ push.deployment.ebEnvironment ~ ')' %}
-                    {% elseif push.deployment.server.type == 'ec2' %}
-                        {% set servername = 'EC2 (' ~ push.deployment.ec2Pool ~ ')' %}
-                    {% else %}
-                        {% set servername = push.deployment.server.name %}
-                    {% endif %}
-
-                    {{ push.deployment.server.environment.key }} → {{ servername }}
+                    {{ push.deployment.server.environment.key }} → {{ push.deployment|formatDeploymentServer(true) }}
                 {% else %}
                     Unknown
                 {% endif %}
