--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -24,7 +24,7 @@
             <tbody>
             {% for repo in repos %}
                 <tr>
-                    <td><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.description }}</a></td>
+                    <td><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.name }}</a></td>
                     <td>
                         <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
                         <svg class="icon"><use xlink:href="#github"></use></svg>
