--- a/app/templates/partials/build-box.twig
+++ b/app/templates/partials/build-box.twig
@@ -12,7 +12,7 @@
                 <header class="card__header split">
                     <span class="split__title">
                         <a href="{{ urlFor('repository.status', {id: build.repository.id}) }}">
-                            {{ build.repository.description }}
+                            {{ build.repository.name }}
                         </a>
                     </span>
 
