--- a/app/templates/partials/push-box.twig
+++ b/app/templates/partials/push-box.twig
@@ -14,7 +14,7 @@
                 <header class="card__header split">
                     <span class="split__title">
                         <a href="{{ urlFor('repository.status', {id: push.build.repository.id}) }}">
-                            {{ push.build.repository.description }}
+                            {{ push.build.repository.name }}
                         </a>
                     </span>
 
