--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -57,7 +57,7 @@
 
             <dt class="split--left__title">Repository</dt>
             <dd class="split--left__value">
-                <a href="{{ urlFor('repository', {'id': push.repository.id}) }}">{{ push.repository.description }}</a>
+                <a href="{{ urlFor('repository', {'id': push.repository.id}) }}">{{ push.repository.name }}</a>
             </dd>
 
             <dt class="split--left__title">Environment</dt>
