--- a/app/templates/repository/admin.edit.twig
+++ b/app/templates/repository/admin.edit.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = 'Edit Repository: ' ~ repository.description %}
+{% set page_title = 'Edit Repository: ' ~ repository.name %}
 
 {% block content %}
     <h2>Edit Repository</h2>
