--- a/app/templates/repository/deployment.twig
+++ b/app/templates/repository/deployment.twig
@@ -14,7 +14,7 @@
     </p>
 
     <h3>Repository</h3>
-    <p><a href="{{ urlFor('repository', {id: deployment.repository.id}) }}">{{ deployment.repository.description }}</a></p>
+    <p><a href="{{ urlFor('repository', {id: deployment.repository.id}) }}">{{ deployment.repository.name }}</a></p>
 
     <h3>File path</h3>
     <p>
