--- a/app/templates/repository/deployments.add.twig
+++ b/app/templates/repository/deployments.add.twig
@@ -3,7 +3,7 @@
 {% set page_title = 'Add Deployment' %}
 
 {% block content %}
-    <h2>Add a new deployment for <b>{{ repository.description }}</b></h2>
+    <h2>Add a new deployment for <b>{{ repository.name }}</b></h2>
 
     <p>
         Deployment relationships define what servers your application can be deployed to and where on that server the code will be placed.
