--- a/app/templates/repository/deployments.edit.twig
+++ b/app/templates/repository/deployments.edit.twig
@@ -12,7 +12,7 @@
     <p>{{ deployment.server|formatServer }}</p>
 
     <h3>Repository</h3>
-    <p>{{ deployment.repository.description }}</p>
+    <p>{{ deployment.repository.name }}</p>
 
     <div class="form-wrapper">
         {% if errors %}
