--- a/app/templates/push/pushes.twig
+++ b/app/templates/push/pushes.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 {% import 'partials/pagination.twig' as pagination %}
 
-{% set page_title = repo.description ~ " Push History" %}
+{% set page_title = repo.name ~ " Push History" %}
 
 {% block content %}
     <p><a class="btn--small btn--back" href="{{ urlFor('repository.status', {'id': repo.id}) }}">Back to Repository Status</a></p>
 
-    <h2>Push History for <strong>{{ repo.description }}</strong></h2>
+    <h2>Push History for <strong>{{ repo.name }}</strong></h2>
 
     {{ block('search') }}
 
