--- a/sass/partials/base/_tables.scss
+++ b/sass/partials/base/_tables.scss
@@ -19,3 +19,10 @@ th.table-mid-header {
     font-weight: bold;
     padding: 0 5px;
 }
+
+.stuck-table {
+    border: 5px solid #000;
+    thead {
+        background: $red;
+    }
+}
